[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fonts/Montserrat-Regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Montserrat-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=6]
[ext_resource path="res://Resources/LogoMini.png" type="Texture" id=7]
[ext_resource path="res://Resources/Logo.png" type="Texture" id=8]
[ext_resource path="res://Scripts/ThemeSelect.gd" type="Script" id=9]
[ext_resource path="res://Themes/godot_theme.tres" type="Theme" id=10]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 4 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 10 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0980392, 0.101961, 0.184314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 42.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sidebar" type="TabContainer" parent="HSplitContainer"]
margin_right = 250.0
margin_bottom = 548.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recents" type="VBoxContainer" parent="HSplitContainer/Sidebar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 41.0
margin_right = -5.0
margin_bottom = -5.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="HSplitContainer/Sidebar/Recents"]
margin_right = 240.0
margin_bottom = 34.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Clear Recents"

[node name="Recents" type="VBoxContainer" parent="HSplitContainer/Sidebar/Recents"]
margin_top = 38.0
margin_right = 240.0
margin_bottom = 502.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="VBoxContainer" parent="HSplitContainer/Sidebar"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 41.0
margin_right = -5.0
margin_bottom = -5.0
script = ExtResource( 6 )

[node name="DrawTabs" type="HBoxContainer" parent="HSplitContainer/Sidebar/Settings"]
margin_right = 240.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="HSplitContainer/Sidebar/Settings/DrawTabs"]
margin_top = 4.0
margin_right = 182.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Draw Tabs"

[node name="CheckButton" type="CheckButton" parent="HSplitContainer/Sidebar/Settings/DrawTabs"]
margin_left = 186.0
margin_right = 240.0
margin_bottom = 34.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0

[node name="DrawSpaces" type="HBoxContainer" parent="HSplitContainer/Sidebar/Settings"]
margin_top = 38.0
margin_right = 240.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="HSplitContainer/Sidebar/Settings/DrawSpaces"]
margin_top = 4.0
margin_right = 182.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Draw Spaces"

[node name="CheckButton" type="CheckButton" parent="HSplitContainer/Sidebar/Settings/DrawSpaces"]
margin_left = 186.0
margin_right = 240.0
margin_bottom = 34.0
focus_mode = 0
enabled_focus_mode = 0

[node name="HighlightCurrent" type="HBoxContainer" parent="HSplitContainer/Sidebar/Settings"]
margin_top = 76.0
margin_right = 240.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="HSplitContainer/Sidebar/Settings/HighlightCurrent"]
margin_top = 4.0
margin_right = 182.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Highlight Current Line"

[node name="CheckButton" type="CheckButton" parent="HSplitContainer/Sidebar/Settings/HighlightCurrent"]
margin_left = 186.0
margin_right = 240.0
margin_bottom = 34.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0

[node name="ShowLineNumbers" type="HBoxContainer" parent="HSplitContainer/Sidebar/Settings"]
margin_top = 114.0
margin_right = 240.0
margin_bottom = 148.0

[node name="Label" type="Label" parent="HSplitContainer/Sidebar/Settings/ShowLineNumbers"]
margin_top = 4.0
margin_right = 182.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Show Line Numbers"

[node name="CheckButton" type="CheckButton" parent="HSplitContainer/Sidebar/Settings/ShowLineNumbers"]
margin_left = 186.0
margin_right = 240.0
margin_bottom = 34.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0

[node name="Caret" type="HBoxContainer" parent="HSplitContainer/Sidebar/Settings"]
margin_top = 152.0
margin_right = 240.0
margin_bottom = 186.0

[node name="Label" type="Label" parent="HSplitContainer/Sidebar/Settings/Caret"]
margin_top = 4.0
margin_right = 182.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Caret Block Mode"

[node name="CheckButton" type="CheckButton" parent="HSplitContainer/Sidebar/Settings/Caret"]
margin_left = 186.0
margin_right = 240.0
margin_bottom = 34.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Theme" type="HBoxContainer" parent="HSplitContainer/Sidebar/Settings"]
margin_top = 190.0
margin_right = 240.0
margin_bottom = 216.0

[node name="Label" type="Label" parent="HSplitContainer/Sidebar/Settings/Theme"]
margin_right = 56.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
text = "Theme"

[node name="ThemeButton" type="OptionButton" parent="HSplitContainer/Sidebar/Settings/Theme"]
margin_left = 60.0
margin_right = 240.0
margin_bottom = 26.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Default"
script = ExtResource( 9 )

[node name="TabContainer" type="TabContainer" parent="HSplitContainer"]
margin_left = 258.0
margin_right = 1004.0
margin_bottom = 548.0
tab_align = 0
drag_to_rearrange_enabled = true

[node name="OpenFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -289.0
margin_top = -185.5
margin_right = 289.0
margin_bottom = 185.5
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
access = 2
current_dir = "C:/Users/Slooth/Documents/GitHub/Signum-Fork"
current_path = "C:/Users/Slooth/Documents/GitHub/Signum-Fork/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveAsFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -311.099
margin_top = -203.584
margin_right = 305.901
margin_bottom = 204.416
popup_exclusive = true
resizable = true
access = 2
current_dir = "C:/Users/Slooth/Documents/GitHub/Signum-Fork"
current_path = "C:/Users/Slooth/Documents/GitHub/Signum-Fork/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 1.0
margin_right = -7.0
margin_bottom = 38.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 32.0
margin_bottom = 37.0
texture = ExtResource( 7 )
stretch_mode = 4

[node name="FileMenu" type="MenuButton" parent="Menu"]
margin_left = 36.0
margin_right = 83.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "File"
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpMenu" type="MenuButton" parent="Menu"]
margin_left = 87.0
margin_right = 146.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "Help"
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutPopup" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -261.5
margin_top = -159.5
margin_right = 261.5
margin_bottom = 159.5
custom_fonts/title_font = SubResource( 4 )
popup_exclusive = true
window_title = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AboutPopup"]
margin_top = 102.0
margin_right = 523.0
margin_bottom = 317.0
custom_fonts/font = ExtResource( 2 )
text = "Signum
-
Open-source text editor made with Godot!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="AboutPopup"]
position = Vector2( 261.379, 86.3293 )
scale = Vector2( 0.104424, 0.110105 )
texture = ExtResource( 8 )
[connection signal="pressed" from="HSplitContainer/Sidebar/Recents/Button" to="." method="clear_recents"]
[connection signal="toggled" from="HSplitContainer/Sidebar/Settings/DrawTabs/CheckButton" to="HSplitContainer/Sidebar/Settings" method="draw_tabs_toggled"]
[connection signal="toggled" from="HSplitContainer/Sidebar/Settings/DrawSpaces/CheckButton" to="HSplitContainer/Sidebar/Settings" method="draw_spaces_toggled"]
[connection signal="toggled" from="HSplitContainer/Sidebar/Settings/HighlightCurrent/CheckButton" to="HSplitContainer/Sidebar/Settings" method="highlight_current_line_toggled"]
[connection signal="toggled" from="HSplitContainer/Sidebar/Settings/ShowLineNumbers/CheckButton" to="HSplitContainer/Sidebar/Settings" method="show_line_numbers_toggled"]
[connection signal="toggled" from="HSplitContainer/Sidebar/Settings/Caret/CheckButton" to="HSplitContainer/Sidebar/Settings" method="caret_toggled"]
[connection signal="item_selected" from="HSplitContainer/Sidebar/Settings/Theme/ThemeButton" to="HSplitContainer/Sidebar/Settings/Theme/ThemeButton" method="theme_select"]
[connection signal="tab_changed" from="HSplitContainer/TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="file_selected" from="OpenFileDialog" to="." method="open_file_selected"]
[connection signal="file_selected" from="SaveAsFileDialog" to="." method="save_as_file_selected"]
